update server build from bonquifa